force-app/main/default/objects/Contact/fields/ucinn_ascendv2__Degree_Type__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Degree_Type__c</fullName>
    <description>Populated through a batch job. Used by VSE reports.</description>
    <label>Degree Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Masters Degree</fullName>
            </value>
            <value>
                <fullName>Doctorate Degree</fullName>
            </value>
            <value>
                <fullName>Associates Degree</fullName>
            </value>
            <value>
                <fullName>Certificate</fullName>
            </value>
            <value>
                <fullName>Post-Doctoral Degree</fullName>
            </value>
            <value>
                <fullName>Undergraduate Degree</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>