force-app/main/default/objects/Contact/fields/ucinn_ascendv2__Degree_Year_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Degree_Year_Formula__c</fullName>
    <formula>TEXT( ucinn_ascendv2__Degree_Year_Roll_Up__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Degree Year</label>
    <type>Text</type>
</CustomField>