force-app/main/default/objects/Contact/fields/ucinn_ascendv2__Degree_Years_Out_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Degree_Years_Out_Formula__c</fullName>
    <description>This is the calculation of Current Year - Earliest Degree Year for living constituents.</description>
    <formula>IF ( ucinn_ascendv2__Is_Deceased__c, NULL, YEAR(TODAY()) -  ucinn_ascendv2__Earliest_Degree_Year_Roll_Up__c )</formula>
    <inlineHelpText>This is the calculation of Current Year - Earliest Degree Year for living constituents.</inlineHelpText>
    <label>Degree Years Out</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>