force-app/main/default/objects/Contact/fields/ucinn_ascendv2__Designation_of_Most_Recent_Pledge_Lookup__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Designation_of_Most_Recent_Pledge_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Designation of Most Recent Pledge</label>
    <referenceTo>ucinn_ascendv2__Designation__c</referenceTo>
    <relationshipLabel>Constituents (Designation of Most Recent Pledge)</relationshipLabel>
    <relationshipName>Contacts_Designation_of_Most_Recent_Plge</relationshipName>
    <type>Lookup</type>
</CustomField>