force-app/main/default/objects/Contact/fields/ucinn_ascendv2__Development_Officer_PEP_1_1_Meeting__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Development_Officer_PEP_1_1_Meeting__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Development Officer for PEP 1:1 Meeting</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contacts_Dev_Officer_PEP_1_1_Meeting</relationshipName>
    <type>Lookup</type>
</CustomField>