force-app/main/default/objects/Contact/fields/ucinn_ascendv2__Discovery_Status__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Discovery_Status__c</fullName>
    <label>Discovery Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Referred</fullName>
            </value>
            <value>
                <fullName>Identified; Non-Referral</fullName>
            </value>
            <value>
                <fullName>Qualified</fullName>
            </value>
            <value>
                <fullName>Disqualified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>