force-app/main/default/objects/Contact/fields/ucinn_ascendv2__Distance_From_Target__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Distance_From_Target__c</fullName>
    <label>Distance From Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>