force-app/main/default/objects/Contact/fields/ucinn_ascendv2__Do_Not_Email__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Do_Not_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Email</label>
    <type>Checkbox</type>
</CustomField>