force-app/main/default/objects/Contact/fields/ucinn_ascendv2__Donor_Extension__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Donor_Extension__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Donor Extension</label>
    <referenceTo>ucinn_ascendv2__Donor_Extension__c</referenceTo>
    <relationshipLabel>Constituents</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>