force-app/main/default/objects/Contact/fields/ucinn_ascendv2__Donor_ID__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Donor_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Donor ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>