force-app/main/default/objects/Contact/fields/ucinn_ascendv2__Earliest_Degree_Year_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Earliest_Degree_Year_Formula__c</fullName>
    <description>Earliest school degree. Used by VSE reports.</description>
    <formula>TEXT(ucinn_ascendv2__Earliest_Degree_Year_Roll_Up__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Earliest Degree Year</label>
    <type>Text</type>
</CustomField>