force-app/main/default/objects/Contact/fields/ucinn_ascendv2__Earliest_Degree_Year_Roll_Up__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Earliest_Degree_Year_Roll_Up__c</fullName>
    <description>Earliest school degree. Used by VSE reports.</description>
    <label>Earliest Degree Year</label>
    <summarizedField>ucinn_ascendv2__Degree_Information__c.ucinn_ascendv2__Degree_Year_Number_Formula__c</summarizedField>
    <summaryFilterItems>
        <field>ucinn_ascendv2__Degree_Information__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>School Degree Information</value>
    </summaryFilterItems>
    <summaryForeignKey>ucinn_ascendv2__Degree_Information__c.ucinn_ascendv2__Contact__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>