force-app/main/default/objects/Contact/fields/ucinn_ascendv2__Earliest_Grad_Degree_Info__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Earliest_Grad_Degree_Info__c</fullName>
    <label>Earliest Grad Degree Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>