force-app/main/default/objects/Contact/fields/ucinn_ascendv2__Email_Body_Rich_Text__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Email_Body_Rich_Text__c</fullName>
    <label>Email Body Rich Text</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>