force-app/main/default/objects/Contact/fields/ucinn_ascendv2__Enrollment_Status__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Enrollment_Status__c</fullName>
    <label>Enrollment Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Incoming Student</fullName>
            </value>
            <value>
                <fullName>On Leave</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>