force-app/main/default/objects/Contact/fields/ucinn_ascendv2__Ethnicity__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Ethnicity__c</fullName>
    <label>Ethnicity</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Asian</fullName>
            </value>
            <value>
                <fullName>Black or African American</fullName>
            </value>
            <value>
                <fullName>Hispanic</fullName>
            </value>
            <value>
                <fullName>Multiracial</fullName>
            </value>
            <value>
                <fullName>Native American or Alaska Native</fullName>
            </value>
            <value>
                <fullName>Native Hawaiian or Pacific Islander</fullName>
            </value>
            <value>
                <fullName>Non-Resident (International)</fullName>
            </value>
            <value>
                <fullName>Not Specified</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>White</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>