force-app/main/default/objects/Contact/fields/ucinn_ascendv2__Expanded_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Expanded_Name_Formula__c</fullName>
    <formula>FirstName  &amp;  IF( ISBLANK( MiddleName ) , &apos; &apos;, &apos; &apos; &amp; MiddleName &amp; &apos; &apos;) &amp; LastName &amp; &apos; &apos; &amp; Suffix</formula>
    <label>Expanded Name</label>
    <type>Text</type>
</CustomField>