force-app/main/default/objects/Contact/fields/ucinn_ascendv2__Expected_Donation_Amount__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Expected_Donation_Amount__c</fullName>
    <label>Expected Donation Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>