force-app/main/default/objects/Contact/fields/ucinn_ascendv2__Fiscal_Year_First_Gift_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Fiscal_Year_First_Gift_Formula__c</fullName>
    <formula>TEXT(
IF(NOT(ISNULL(ucinn_ascendv2__Date_of_First_Gift__c)) &amp;&amp; NOT(ISNULL(ucinn_ascendv2__Date_of_First_Pledge_Payment__c)), MIN(IF(MONTH(ucinn_ascendv2__Date_of_First_Gift__c) &gt;= 7 &amp;&amp; MONTH(ucinn_ascendv2__Date_of_First_Gift__c) &lt;= 12 ,
YEAR(ucinn_ascendv2__Date_of_First_Gift__c)+1 ,
YEAR(ucinn_ascendv2__Date_of_First_Gift__c)),
IF (MONTH(ucinn_ascendv2__Date_of_First_Pledge_Payment__c) &gt;= 7 &amp;&amp; MONTH(ucinn_ascendv2__Date_of_First_Pledge_Payment__c) &lt;= 12 ,
YEAR(ucinn_ascendv2__Date_of_First_Pledge_Payment__c)+1 ,
YEAR(ucinn_ascendv2__Date_of_First_Pledge_Payment__c))),
IF(NOT(ISNULL(ucinn_ascendv2__Date_of_First_Gift__c)),
IF(MONTH(ucinn_ascendv2__Date_of_First_Gift__c) &gt;= 7 &amp;&amp; MONTH(ucinn_ascendv2__Date_of_First_Gift__c) &lt;= 12 ,
YEAR(ucinn_ascendv2__Date_of_First_Gift__c)+1,
YEAR(ucinn_ascendv2__Date_of_First_Gift__c)),
IF(MONTH(ucinn_ascendv2__Date_of_First_Pledge_Payment__c) &gt;= 7 &amp;&amp; MONTH(ucinn_ascendv2__Date_of_First_Pledge_Payment__c) &lt;= 12 ,
YEAR(ucinn_ascendv2__Date_of_First_Pledge_Payment__c)+1 ,
YEAR(ucinn_ascendv2__Date_of_First_Pledge_Payment__c)))))</formula>
    <label>Fiscal Year First Gift</label>
    <type>Text</type>
</CustomField>