force-app/main/default/objects/Contact/fields/ucinn_ascendv2__Fiscal_Year_Last_Gift_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Fiscal_Year_Last_Gift_Formula__c</fullName>
    <formula>MAX(IF(MONTH(ucinn_ascendv2__Date_of_Most_Recent_Gift__c) &gt;= 7 &amp;&amp; MONTH(ucinn_ascendv2__Date_of_Most_Recent_Gift__c) &lt;= 12 ,YEAR(ucinn_ascendv2__Date_of_Most_Recent_Gift__c)+1 , YEAR(ucinn_ascendv2__Date_of_Most_Recent_Gift__c))
,IF (MONTH(ucinn_ascendv2__Date_of_Most_Recent_Pledge_Payment__c) &gt;= 7 &amp;&amp; MONTH(ucinn_ascendv2__Date_of_Most_Recent_Pledge_Payment__c) &lt;= 12 ,YEAR(ucinn_ascendv2__Date_of_Most_Recent_Pledge_Payment__c)+1 , YEAR(ucinn_ascendv2__Date_of_Most_Recent_Pledge_Payment__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fiscal Year Last Gift</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>