force-app/main/default/objects/Contact/fields/ucinn_ascendv2__Full_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Full_Name_Formula__c</fullName>
    <formula>IF(  NOT(ISPICKVAL(Salutation, &quot;&quot;)),  TEXT(Salutation) &amp; &quot; &quot; &amp;  FirstName &amp; &quot; &quot; &amp; LastName &amp; &quot; &quot; &amp; Suffix , FirstName &amp; &quot; &quot; &amp; LastName &amp; &quot; &quot; &amp; Suffix)</formula>
    <label>Full Name</label>
    <type>Text</type>
</CustomField>