force-app/main/default/objects/Contact/fields/ucinn_ascendv2__Full_Name_No_Trustee_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Full_Name_No_Trustee_Formula__c</fullName>
    <formula>IF(ucinn_ascendv2__Is_Trustee_Formula__c = true, &apos;&apos;,  ucinn_ascendv2__Full_Name_Formula__c )</formula>
    <label>Full Name (No Trustee)</label>
    <type>Text</type>
</CustomField>