force-app/main/default/objects/Contact/fields/ucinn_ascendv2__Gender__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Gender__c</fullName>
    <label>Gender</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Agender</fullName>
            </value>
            <value>
                <fullName>Cis Female</fullName>
            </value>
            <value>
                <fullName>Cis Male</fullName>
            </value>
            <value>
                <fullName>Gender Fluid</fullName>
            </value>
            <value>
                <fullName>Gender queer</fullName>
            </value>
            <value>
                <fullName>Nonbinary</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Transgender Female</fullName>
            </value>
            <value>
                <fullName>Transgender Male</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>