force-app/main/default/objects/Contact/fields/ucinn_ascendv2__Giving_Summary_Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Giving_Summary_Last_Updated__c</fullName>
    <label>Giving Summary Last Updated</label>
    <type>DateTime</type>
</CustomField>