force-app/main/default/objects/Contact/fields/ucinn_ascendv2__Guarantor_ID__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Guarantor_ID__c</fullName>
    <externalId>true</externalId>
    <label>Guarantor ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>