force-app/main/default/objects/Contact/fields/ucinn_ascendv2__Home_City_No_Trustee_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Home_City_No_Trustee_Formula__c</fullName>
    <formula>IF(ucinn_ascendv2__Is_Trustee_Formula__c = true, &apos;&apos;, MailingCity)</formula>
    <label>Home City (No Trustee)</label>
    <type>Text</type>
</CustomField>