force-app/main/default/objects/Contact/fields/ucinn_ascendv2__Home_Postal_Code_No_Trustee_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Home_Postal_Code_No_Trustee_Formula__c</fullName>
    <formula>IF(ucinn_ascendv2__Is_Trustee_Formula__c = true, &apos;&apos;,  MailingPostalCode )</formula>
    <label>Home Postal Code (No Trustee)</label>
    <type>Text</type>
</CustomField>