force-app/main/default/objects/Contact/fields/ucinn_ascendv2__Hospital_Organization_2_Number__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Hospital_Organization_2_Number__c</fullName>
    <label>Hospital Organization 2 Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>