force-app/main/default/objects/Contact/fields/ucinn_ascendv2__Hospital_Organization_Number__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Hospital_Organization_Number__c</fullName>
    <label>Hospital Organization Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>