force-app/main/default/objects/Contact/fields/ucinn_ascendv2__Household_Member_Order__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Household_Member_Order__c</fullName>
    <description>Determines the order of household member names as they appear in the household naming convention.</description>
    <inlineHelpText>Determines the order of household member names as they appear in the household naming convention.</inlineHelpText>
    <label>Household Member Order</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>