force-app/main/default/objects/Contact/fields/ucinn_ascendv2__In_Care_Of_Other__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__In_Care_Of_Other__c</fullName>
    <label>In Care Of (Other)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>