force-app/main/default/objects/Contact/fields/ucinn_ascendv2__Is_Actual_Birthday__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Is_Actual_Birthday__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Actual Birthday</label>
    <type>Checkbox</type>
</CustomField>