force-app/main/default/objects/Contact/fields/ucinn_ascendv2__Is_Exclude_From_Household_Name__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Is_Exclude_From_Household_Name__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether or not to exclude the constituent from the household naming convention.</description>
    <inlineHelpText>Whether or not to exclude the constituent from the household naming convention.</inlineHelpText>
    <label>Is Exclude From Household Name</label>
    <type>Checkbox</type>
</CustomField>